--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.1",
+    "@react-navigation/native": "^5.8.9",
     "axios": "^0.21.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-loading-spinner-overlay": "^2.0.0",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.14.0",
+    "react-native-swiper": "^1.6.0-rc.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
